# service_client

./: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
.dev/runbooks/: runbook-2026-03-16-result-pattern-remove-auth.md
code/dart/: .gitignore  CHANGELOG.md  pubspec.yaml
code/dart/example/: example.dart
code/dart/example/controllers/: todo_controller.dart
code/dart/example/models/: todo.dart  todo_failure.dart
code/dart/example/services/: json_placeholder_service.dart
code/dart/lib/: service_client.dart
code/dart/test/: parity_test.dart
code/dart/test/core/: result_test.dart  service_core_test.dart
code/dart/test/http/: http_client_test.dart  http_exceptions_test.dart  http_service_client_test.dart
code/py/: .gitignore  CHANGELOG.md  README.md  publish.ps1  pyproject.toml
code/py/example/: example.py
code/py/example/controllers/: todo_controller.py
code/py/example/models/: todo.py  todo_failure.py
code/py/example/services/: json_placeholder_service.py
code/py/src/service_client/: __init__.py
code/py/src/service_client/core/: __init__.py  result.py  service_client.py  service_failure.py
code/py/src/service_client/http/: __init__.py  http_client.py  http_client_exception.py  http_service_client.py
code/py/tests/: test_parity.py
code/py/tests/core/: test_result.py  test_service_client.py
code/py/tests/http/: test_http_client.py  test_http_exceptions.py  test_http_service_client.py
code/tests/fixtures/: errors.json  result.json  service_client_config.json  service_request.json  transport.json
code/tests/integration_test/: parity_test.ps1
code/ts/: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
code/ts/example/: example.ts
code/ts/example/controllers/: todo_controller.ts
code/ts/example/models/: todo.ts  todo_failure.ts
code/ts/example/services/: json_placeholder_service.ts
code/ts/src/: index.ts
code/ts/src/core/: result.ts  service_client.ts  service_failure.ts
code/ts/src/http/: http_client.ts  http_client_exception.ts  http_service_client.ts
code/ts/test/: parity.test.ts
code/ts/test/core/: result.test.ts  service_client.test.ts
code/ts/test/http/: http_client.test.ts  http_exceptions.test.ts  http_service_client.test.ts
doc/: architecture.md  roadmap.md
docs/: architecture.md
docs/adr/: 0001-record-architecture-decisions.md
example/: example.dart
example/controllers/: todo_controller.dart
example/services/: json_placeholder_service.dart
lib/: service_client.dart
lib/src/core/: result.dart  service_core.dart
lib/src/http/: auth_exceptions.dart  http_client.dart  http_service_client.dart  token.dart  token_vault.dart
test/core/: result_test.dart
test/storage/: file_storage_test.dart  memory_storage_test.dart
(+10 files in other folders)
